--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@ figcaption{
     to  {left:-500%;}
 }
 /*
-3. d) On anime le srpite
+3. d) On anime le sprite
 		- le rendre capable de se décaler
 		- appeler l'animation, lui dire de se faire sur 2 secondes, de tourner en boucle et de se faire en 5 étapes
 */
